# PiccoloStudy02

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: editor.h
engine/source/editor/source/: editor.cpp  main.cpp
engine/source/precompile/: precompile.cmake
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: macro.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
